# Solitaire

./: .gitignore  README.md  TODO.md  TOOD.md
Documentataion/: Devlog.md  SolitaireSpecification.md
Documentation/: Devlog.md  SolitaireSpecification.md  SurveyOfOtherImplementations.txt  solitaireclassdiagram.qmodel
QtSolitaire/: CMakeLists.txt  Constants.h  card.cpp  card.h  cardstack.cpp  cardstack.h  clickableitem.cpp  clickableitem.h  constants.h  deck.cpp  deck.h  enumiterator.h  game.cpp  game.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myScene.h  undocommands.cpp  undocommands.h
